# probeMCP

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codex/skills/probemcp-backend-lab/: SKILL.md
.codex/skills/probemcp-core-development/: SKILL.md
.codex/skills/probemcp-safety-review/: SKILL.md
.github/: labels.yml  milestones.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend_adapter.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  repo-metadata.yml
docs/: architecture.md  backend-adapters.md  commercial-boundaries.md  compatibility-matrix.md  contribution-licensing.md  cortex-m-fault-analysis.md  development.md  mcp-client-setup.md  mvp-plan.md  privacy-redaction.md  release-checklist.md  roadmap.md  safety-model.md  security-threat-model.md  tool-contracts.md  triage-workflow.md  troubleshooting.md  vendor-backend-research.md
docs/adr/: 0001-python-local-first-core.md
examples/codex-mcp/: README.md  codex-config.toml  stdio_smoke.py
examples/qemu-cortexm-hardfault/: Makefile  README.md  linker.ld  main.c  startup.s
src/probemcp/: __init__.py  cli.py  config.py  errors.py  peripherals.py  privacy.py  schemas_export.py  svd.py  symbols.py  targets.py
src/probemcp/audit/: __init__.py  logger.py
src/probemcp/backends/: __init__.py  base.py  factory.py  generic_remote.py  openocd.py  qemu.py  vendor.py
tests/: test_adapter_conformance.py  test_audit_logger.py  test_backend_and_session.py  test_cli.py  test_config_and_diagnostics.py  test_cortexm_fault_analyzer.py  test_debug_state.py  test_examples_codex_mcp.py  test_mcp_app.py  test_mcp_schemas.py  test_mcp_stdio_harness.py  test_mi_commands.py  test_mi_controller.py  test_mi_parser.py  test_mi_transcript_corpus.py  test_new_backends_and_limits.py  test_package.py  test_qemu_integration_opt_in.py  test_safety_confirmation_and_privacy.py  test_safety_policy.py  test_session_manager.py  test_snapshot_service.py  test_svd_rtos_lab.py  test_symbols.py  test_tool_registry.py  test_tool_service.py
(+41 files in other folders)
