[project]
name = "probemcp"
version = "0.0.0"
description = "Safe MCP server for embedded debugging over GDB/MI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cham Nguyen Phuong", email = "chamnp.gpt@gmail.com" }
]
keywords = [
  "mcp",
  "debugging",
  "embedded",
  "gdb",
  "gdb-mi",
  "cortex-m",
  "openocd",
  "qemu",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "structlog>=24.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ProbeMCP/probeMCP"
Repository = "https://github.com/ProbeMCP/probeMCP"
Issues = "https://github.com/ProbeMCP/probeMCP/issues"

[project.scripts]
probemcp = "probemcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probemcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--cov=probemcp",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
markers = [
  "integration_qemu: tests that require a local QEMU target",
  "hardware: tests that require physical debug hardware",
]

[tool.coverage.run]
branch = true
source = ["probemcp"]

[tool.coverage.report]
show_missing = true
skip_covered = false
